# ROB

./: .gitignore  GET_STARTED.md  HintsAndTips.md  MAVEN-REPO.md  RAW_LINKS.md  README.md  RPI_COMMANDS.md  bashrc.addon.sh  build.gradle  line.counter.sh  push.sh  settings.gradle  start.from.scratch.sh  sysinfo.sh
Java-TCP-Python/: README.md  build.gradle  find.port.sh  start.tcp.client.sh
Java-TCP-Python/resources/: PushButtons.fzz  PushButtons_inv.fzz
Serial-IO/: README.md  build.gradle  find.usb.sh  runGPSSample.sh  serial.dump.sh
SerialRxTx/: README.md  build.gradle
astro-computer/: README.md
astro-computer/AstroComputer/: README.md  build.gradle  eclipse.finder.sh  package.java.sh  seasons.times.sh  settings.gradle
astro-computer/AstroUtilities/: README.md  build.gradle
common-image-utils/: build.gradle
common-swing-utils/: build.gradle
common-utils/: README.md  build.gradle  email.properties  start.tcp.client.sh  start.udp.client.sh  start.udp.server.sh
docker/: README.md  README_2.md  build.image.sh  navserver.Dockerfile  rm.images.sh
http-tiny-server/: CASE_STUDY.md  README.md  TODO.md  build.gradle  logging.properties  server.js  small.server.sh  testrun.sh
raspberry-sailor/: README.md
raspberry-sailor/NMEA-Parser/src/main/python/: LICENSE  NMEABuilder.py  NMEAParser.py  NMEASerialTest.py  README.md  pyproject.toml  utils.py
raspberry-sailor/NMEA-Parser/src/main/python/NMEAParserROB/: NMEASerialTest.py  checksum.py
workbench/: README.md  build.gradle  members.for.tests.json  members.json  run.sh  server.js
(+2197 files in other folders)
